Sync all content

--- a/content/resources/15-082jf10.md
+++ b/content/resources/15-082jf10.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'Network representation of the transshipment problem. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/46e0640fbe139dc81923049424ef58a5_15-082jf10.jpg
+file: /media/courses/15-082j-network-optimization-fall-2010/46e0640fbe139dc81923049424ef58a5_15-082jf10.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Given demand, production capabilities, and costs of shipment, what is the
@@ -10,6 +10,8 @@ image_metadata:
     James Orlin.)
   credit: Image by Prof. Orlin
   image-alt: Network representation of a transshipment problem.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 15-082jf10.jpg
 uid: 46e0640f-be13-9dc8-1923-049424ef58a5
