--- a/content/resources/15-082jf10-th.md
+++ b/content/resources/15-082jf10-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/adf6703b8c86ace66ee3a15887804926_15-082jf10-th.jpg
+file: /media/courses/15-082j-network-optimization-fall-2010/adf6703b8c86ace66ee3a15887804926_15-082jf10-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Given demand, production capabilities, and costs of shipment, what is the
@@ -10,6 +10,8 @@ image_metadata:
     James Orlin.)
   credit: ''
   image-alt: Network representation of a transshipment problem.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 15-082jf10-th.jpg
 uid: adf6703b-8c86-ace6-6ee3-a15887804926
