--- a/content/resources/mit15_082jf10_assn01.md
+++ b/content/resources/mit15_082jf10_assn01.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: 'This resource contians the information regarding to Readings in AMO. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/822b4fc41a04c499d789612240315f61_MIT15_082JF10_assn01.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/822b4fc41a04c499d789612240315f61_MIT15_082JF10_assn01.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_assn01.pdf
 uid: 822b4fc4-1a04-c499-d789-612240315f61
