--- a/content/resources/mit15_082jf10_assn03.md
+++ b/content/resources/mit15_082jf10_assn03.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: 'This resource contains information related to Maximum Flows: Basic Ideas.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/3f01736f9c5b57bff854b86f1853faa4_MIT15_082JF10_assn03.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/3f01736f9c5b57bff854b86f1853faa4_MIT15_082JF10_assn03.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_assn03.pdf
 uid: 3f01736f-9c5b-57bf-f854-b86f1853faa4
