--- a/content/resources/mit15_082jf10_av01-1.md
+++ b/content/resources/mit15_082jf10_av01-1.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource contains information about the breadth first search.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/9f38af09dcb1fdcd4c98db9f05bcc196_MIT15_082JF10_av01.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/9f38af09dcb1fdcd4c98db9f05bcc196_MIT15_082JF10_av01.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_av01.ppt
 uid: 9f38af09-dcb1-fdcd-4c98-db9f05bcc196
