--- a/content/resources/mit15_082jf10_av01.md
+++ b/content/resources/mit15_082jf10_av01.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource contains information about the breadth first search.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/f2c389184787356f1ad48e243b742524_MIT15_082JF10_av01.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/f2c389184787356f1ad48e243b742524_MIT15_082JF10_av01.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_av01.pdf
 uid: f2c38918-4787-356f-1ad4-8e243b742524
