--- a/content/resources/mit15_082jf10_av03.md
+++ b/content/resources/mit15_082jf10_av03.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource contains an information related to the topological ordering.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/33ac06b890732e57a7f08b5fa94c99a4_MIT15_082JF10_av03.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/33ac06b890732e57a7f08b5fa94c99a4_MIT15_082JF10_av03.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_av03.pdf
 uid: 33ac06b8-9073-2e57-a7f0-8b5fa94c99a4
