--- a/content/resources/mit15_082jf10_av05.md
+++ b/content/resources/mit15_082jf10_av05.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource contains the information related to the Flow decomposition.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/9cf7f895cffa18265dd0f24f78fcfb0d_MIT15_082JF10_av05.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/9cf7f895cffa18265dd0f24f78fcfb0d_MIT15_082JF10_av05.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_av05.pdf
 uid: 9cf7f895-cffa-1826-5dd0-f24f78fcfb0d
