--- a/content/resources/mit15_082jf10_av09.md
+++ b/content/resources/mit15_082jf10_av09.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource contains the information related to the Radix heap animation.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/b9a6748a2d111ab5831efab32f6c47ff_MIT15_082JF10_av09.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/b9a6748a2d111ab5831efab32f6c47ff_MIT15_082JF10_av09.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_av09.pdf
 uid: b9a6748a-2d11-1ab5-831e-fab32f6c47ff
