--- a/content/resources/mit15_082jf10_av10-1.md
+++ b/content/resources/mit15_082jf10_av10-1.md
@@ -2,8 +2,12 @@
 content_type: resource
 description: This resource contains the information related to the label correcting
   algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/5d644b73336f57583bb0de647ea20f28_MIT15_082JF10_av10.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/5d644b73336f57583bb0de647ea20f28_MIT15_082JF10_av10.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_av10.ppt
 uid: 5d644b73-336f-5758-3bb0-de647ea20f28
