--- a/content/resources/mit15_082jf10_av12.md
+++ b/content/resources/mit15_082jf10_av12.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource gives the information about the Ford-Fulkerson algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/fcbf2ec30c24273822486064f4896231_MIT15_082JF10_av12.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/fcbf2ec30c24273822486064f4896231_MIT15_082JF10_av12.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_av12.pdf
 uid: fcbf2ec3-0c24-2738-2248-6064f4896231
