--- a/content/resources/mit15_082jf10_av13-1.md
+++ b/content/resources/mit15_082jf10_av13-1.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource provides an information related to the Preflow push algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/32cfc77b8d435cb98fb027f763c8a469_MIT15_082JF10_av13.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/32cfc77b8d435cb98fb027f763c8a469_MIT15_082JF10_av13.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_av13.ppt
 uid: 32cfc77b-8d43-5cb9-8fb0-27f763c8a469
