--- a/content/resources/mit15_082jf10_av13.md
+++ b/content/resources/mit15_082jf10_av13.md
@@ -1,8 +1,12 @@
 ---
 content_type: resource
 description: This resource provides an information related to the Preflow push algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/3e6416175fd7afd74ced5eff741a40b9_MIT15_082JF10_av13.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/3e6416175fd7afd74ced5eff741a40b9_MIT15_082JF10_av13.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_av13.pdf
 uid: 3e641617-5fd7-afd7-4ced-5eff741a40b9
