--- a/content/resources/mit15_082jf10_av14-1.md
+++ b/content/resources/mit15_082jf10_av14-1.md
@@ -2,8 +2,12 @@
 content_type: resource
 description: This resource contains the information related to the Negative cycle
   algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/b60a23423b20209e1c9b2cb8c3cd7252_MIT15_082JF10_av14.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/b60a23423b20209e1c9b2cb8c3cd7252_MIT15_082JF10_av14.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_av14.ppt
 uid: b60a2342-3b20-209e-1c9b-2cb8c3cd7252
