--- a/content/resources/mit15_082jf10_av15-1.md
+++ b/content/resources/mit15_082jf10_av15-1.md
@@ -2,8 +2,12 @@
 content_type: resource
 description: This resource gives the information related to the successive shortest
   path (SSP) algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/4ebfe5931486dc522b488406f6bf6e57_MIT15_082JF10_av15.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/4ebfe5931486dc522b488406f6bf6e57_MIT15_082JF10_av15.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_av15.ppt
 uid: 4ebfe593-1486-dc52-2b48-8406f6bf6e57
