--- a/content/resources/mit15_082jf10_av15.md
+++ b/content/resources/mit15_082jf10_av15.md
@@ -2,8 +2,12 @@
 content_type: resource
 description: This resource gives the information related to the successive shortest
   path (SSP) algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/296e833ef37a6fc21856f9a591fb5ae0_MIT15_082JF10_av15.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/296e833ef37a6fc21856f9a591fb5ae0_MIT15_082JF10_av15.pdf
 file_type: application/pdf
+learning_resource_types: []
+ocw_type: OCWFile
+parent_title: Animations
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_av15.pdf
 uid: 296e833e-f37a-6fc2-1856-f9a591fb5ae0
