--- a/content/resources/mit15_082jf10_lec01-1.md
+++ b/content/resources/mit15_082jf10_lec01-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information about the introduction to network
   models.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/ec15e9b253a8b4f13d950249432a092e_MIT15_082JF10_lec01.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/ec15e9b253a8b4f13d950249432a092e_MIT15_082JF10_lec01.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec01.ppt
 uid: ec15e9b2-53a8-b4f1-3d95-0249432a092e
