--- a/content/resources/mit15_082jf10_lec01.md
+++ b/content/resources/mit15_082jf10_lec01.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information about the introduction to network
   models.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/084aaba151e144f852e66099c7ea1213_MIT15_082JF10_lec01.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/084aaba151e144f852e66099c7ea1213_MIT15_082JF10_lec01.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec01.pdf
 uid: 084aaba1-51e1-44f8-52e6-6099c7ea1213
