--- a/content/resources/mit15_082jf10_lec02-1.md
+++ b/content/resources/mit15_082jf10_lec02-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to computational complexity
   and data structures.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/0cb97d32963a86562ebc6f88ceae7319_MIT15_082JF10_lec02.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/0cb97d32963a86562ebc6f88ceae7319_MIT15_082JF10_lec02.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec02.ppt
 uid: 0cb97d32-963a-8656-2ebc-6f88ceae7319
