--- a/content/resources/mit15_082jf10_lec02.md
+++ b/content/resources/mit15_082jf10_lec02.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to computational complexity
   and data structures.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/7bea14a27536e04897f2338cb1938144_MIT15_082JF10_lec02.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/7bea14a27536e04897f2338cb1938144_MIT15_082JF10_lec02.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec02.pdf
 uid: 7bea14a2-7536-e048-97f2-338cb1938144
