--- a/content/resources/mit15_082jf10_lec04-1.md
+++ b/content/resources/mit15_082jf10_lec04-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to transformations and flow
   decomposition.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/865cbba041c80ae94a9133a2fdaf06d4_MIT15_082JF10_lec04.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/865cbba041c80ae94a9133a2fdaf06d4_MIT15_082JF10_lec04.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec04.ppt
 uid: 865cbba0-41c8-0ae9-4a91-33a2fdaf06d4
