--- a/content/resources/mit15_082jf10_lec04.md
+++ b/content/resources/mit15_082jf10_lec04.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to transformations and flow
   decomposition.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/0911d1fe02b68af5127a53657f25b5a8_MIT15_082JF10_lec04.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/0911d1fe02b68af5127a53657f25b5a8_MIT15_082JF10_lec04.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec04.pdf
 uid: 0911d1fe-02b6-8af5-127a-53657f25b5a8
