--- a/content/resources/mit15_082jf10_lec05-1.md
+++ b/content/resources/mit15_082jf10_lec05-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource provides information related to shortest paths: label
   setting algorithms.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/2eb831f85e01c25c93e237ad0648f0c1_MIT15_082JF10_lec05.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/2eb831f85e01c25c93e237ad0648f0c1_MIT15_082JF10_lec05.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec05.ppt
 uid: 2eb831f8-5e01-c25c-93e2-37ad0648f0c1
