--- a/content/resources/mit15_082jf10_lec05.md
+++ b/content/resources/mit15_082jf10_lec05.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource provides information related to shortest paths: label
   setting algorithms.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/d0d0157f8aad0ea926accdd22f863d85_MIT15_082JF10_lec05.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/d0d0157f8aad0ea926accdd22f863d85_MIT15_082JF10_lec05.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec05.pdf
 uid: d0d0157f-8aad-0ea9-26ac-cdd22f863d85
