--- a/content/resources/mit15_082jf10_lec07.md
+++ b/content/resources/mit15_082jf10_lec07.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to shortest paths: label
   correcting algorithms.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/614add9c5fbbca47c0ad5fa410ae985c_MIT15_082JF10_lec07.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/614add9c5fbbca47c0ad5fa410ae985c_MIT15_082JF10_lec07.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec07.pdf
 uid: 614add9c-5fbb-ca47-c0ad-5fa410ae985c
