--- a/content/resources/mit15_082jf10_lec08-1.md
+++ b/content/resources/mit15_082jf10_lec08-1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource provides information related to Algorithm analysis.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/89a4f890ee77f2d7651695cc609aeed7_MIT15_082JF10_lec08.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/89a4f890ee77f2d7651695cc609aeed7_MIT15_082JF10_lec08.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec08.ppt
 uid: 89a4f890-ee77-f2d7-6516-95cc609aeed7
