--- a/content/resources/mit15_082jf10_lec08.md
+++ b/content/resources/mit15_082jf10_lec08.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource provides information related to Algorithm analysis.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/037acef4ee17c444a2cdbe9ef873a11b_MIT15_082JF10_lec08.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/037acef4ee17c444a2cdbe9ef873a11b_MIT15_082JF10_lec08.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec08.pdf
 uid: 037acef4-ee17-c444-a2cd-be9ef873a11b
