--- a/content/resources/mit15_082jf10_lec09-1.md
+++ b/content/resources/mit15_082jf10_lec09-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to basic algorithms for the
   maximum flow problem.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/4a685a6bc6f742dfe614d303635fa62f_MIT15_082JF10_lec09.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/4a685a6bc6f742dfe614d303635fa62f_MIT15_082JF10_lec09.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec09.ppt
 uid: 4a685a6b-c6f7-42df-e614-d303635fa62f
