--- a/content/resources/mit15_082jf10_lec09.md
+++ b/content/resources/mit15_082jf10_lec09.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to basic algorithms for the
   maximum flow problem.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/f04ed4c62068421e1184f3114721713c_MIT15_082JF10_lec09.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/f04ed4c62068421e1184f3114721713c_MIT15_082JF10_lec09.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec09.pdf
 uid: f04ed4c6-2068-421e-1184-f3114721713c
