--- a/content/resources/mit15_082jf10_lec10-1.md
+++ b/content/resources/mit15_082jf10_lec10-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information regarding to combinatorial applications
   of maximum flows.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/c5ce6adf28bb9698b5c72c7d5d22316b_MIT15_082JF10_lec10.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/c5ce6adf28bb9698b5c72c7d5d22316b_MIT15_082JF10_lec10.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec10.ppt
 uid: c5ce6adf-28bb-9698-b5c7-2c7d5d22316b
