--- a/content/resources/mit15_082jf10_lec11-1.md
+++ b/content/resources/mit15_082jf10_lec11-1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to preflow push algorithms.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/0ec5aafb912522fa3f539bc17f5a94f8_MIT15_082JF10_lec11.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/0ec5aafb912522fa3f539bc17f5a94f8_MIT15_082JF10_lec11.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec11.ppt
 uid: 0ec5aafb-9125-22fa-3f53-9bc17f5a94f8
