--- a/content/resources/mit15_082jf10_lec13-1.md
+++ b/content/resources/mit15_082jf10_lec13-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information regarding to the minimum cost flow:
   basic algorithms.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/8334eaa479f1d7841a57e3138bdd319d_MIT15_082JF10_lec13.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/8334eaa479f1d7841a57e3138bdd319d_MIT15_082JF10_lec13.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec13.ppt
 uid: 8334eaa4-79f1-d784-1a57-e3138bdd319d
