--- a/content/resources/mit15_082jf10_lec14-1.md
+++ b/content/resources/mit15_082jf10_lec14-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information for minimum cost flow: polynomial
   time algorithms.'
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/35734f3a96983e590c207a6d7be54eb9_MIT15_082JF10_lec14.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/35734f3a96983e590c207a6d7be54eb9_MIT15_082JF10_lec14.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec14.ppt
 uid: 35734f3a-9698-3e59-0c20-7a6d7be54eb9
