--- a/content/resources/mit15_082jf10_lec15-1.md
+++ b/content/resources/mit15_082jf10_lec15-1.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to applications of network
   flows; Linear programming review.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/56433055049c206d3f80eb96aac98107_MIT15_082JF10_lec15.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/56433055049c206d3f80eb96aac98107_MIT15_082JF10_lec15.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec15.ppt
 uid: 56433055-049c-206d-3f80-eb96aac98107
