--- a/content/resources/mit15_082jf10_lec15.md
+++ b/content/resources/mit15_082jf10_lec15.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource provides information related to applications of network
   flows; Linear programming review.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/87ee338a701dcd52784c86daef642113_MIT15_082JF10_lec15.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/87ee338a701dcd52784c86daef642113_MIT15_082JF10_lec15.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec15.pdf
 uid: 87ee338a-701d-cd52-784c-86daef642113
