--- a/content/resources/mit15_082jf10_lec16-1.md
+++ b/content/resources/mit15_082jf10_lec16-1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information about the network simplex algorithm.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/e048b527dca76980222bf258a30545f8_MIT15_082JF10_lec16.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/e048b527dca76980222bf258a30545f8_MIT15_082JF10_lec16.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec16.ppt
 uid: e048b527-dca7-6980-222b-f258a30545f8
