--- a/content/resources/mit15_082jf10_lec19.md
+++ b/content/resources/mit15_082jf10_lec19.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to Lagrangian relaxation 1.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/20a632644cf3d882d4406294d4548f97_MIT15_082JF10_lec19.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/20a632644cf3d882d4406294d4548f97_MIT15_082JF10_lec19.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec19.pdf
 uid: 20a63264-4cf3-d882-d440-6294d4548f97
