--- a/content/resources/mit15_082jf10_lec20-1.md
+++ b/content/resources/mit15_082jf10_lec20-1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to Lagrangian relaxation 2.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/940e3bddc40d3e40f849b12dc3d5aec1_MIT15_082JF10_lec20.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/940e3bddc40d3e40f849b12dc3d5aec1_MIT15_082JF10_lec20.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec20.ppt
 uid: 940e3bdd-c40d-3e40-f849-b12dc3d5aec1
