--- a/content/resources/mit15_082jf10_lec20.md
+++ b/content/resources/mit15_082jf10_lec20.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to Lagrangian relaxation 2.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/3e3ce04fd199c68fefef5fd980112774_MIT15_082JF10_lec20.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/3e3ce04fd199c68fefef5fd980112774_MIT15_082JF10_lec20.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec20.pdf
 uid: 3e3ce04f-d199-c68f-efef-5fd980112774
