--- a/content/resources/mit15_082jf10_lec21-1.md
+++ b/content/resources/mit15_082jf10_lec21-1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 1.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/03d56b3894bd6223d0a9a879ecd869c4_MIT15_082JF10_lec21.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/03d56b3894bd6223d0a9a879ecd869c4_MIT15_082JF10_lec21.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec21.ppt
 uid: 03d56b38-94bd-6223-d0a9-a879ecd869c4
