--- a/content/resources/mit15_082jf10_lec21.md
+++ b/content/resources/mit15_082jf10_lec21.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 1.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/672666a612a42d5d828c9ff3b56130e2_MIT15_082JF10_lec21.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/672666a612a42d5d828c9ff3b56130e2_MIT15_082JF10_lec21.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec21.pdf
 uid: 672666a6-12a4-2d5d-828c-9ff3b56130e2
