--- a/content/resources/mit15_082jf10_lec22-1.md
+++ b/content/resources/mit15_082jf10_lec22-1.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 2.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/6969633224e4619bcf967f3ff4d3d9ad_MIT15_082JF10_lec22.ppt
+file: /media/courses/15-082j-network-optimization-fall-2010/6969633224e4619bcf967f3ff4d3d9ad_MIT15_082JF10_lec22.ppt
 file_type: application/vnd.ms-powerpoint
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Other
 title: MIT15_082JF10_lec22.ppt
 uid: 69696332-24e4-619b-cf96-7f3ff4d3d9ad
