--- a/content/resources/mit15_082jf10_lec22.md
+++ b/content/resources/mit15_082jf10_lec22.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 2.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-082j-network-optimization-fall-2010/8dfb047185c50dce4de39d02c375e020_MIT15_082JF10_lec22.pdf
+file: /media/courses/15-082j-network-optimization-fall-2010/8dfb047185c50dce4de39d02c375e020_MIT15_082JF10_lec22.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_082JF10_lec22.pdf
 uid: 8dfb0471-85c5-0dce-4de3-9d02c375e020
