Sync all content

--- a/content/resources/mit15_082jf10_lec07-1.md
+++ b/content/resources/mit15_082jf10_lec07-1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to shortest paths: label
   correcting algorithms.'
-file: /media/courses/15-082j-network-optimization-fall-2010/f63b3dada273693df4f44f20cd238019_MIT15_082JF10_lec07.ppt
+file: /courses/15-082j-network-optimization-fall-2010/f63b3dada273693df4f44f20cd238019_MIT15_082JF10_lec07.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec07.ppt
 uid: f63b3dad-a273-693d-f4f4-4f20cd238019
 ---
+This resource contains information related to shortest paths: label correcting algorithms.
+
