--- a/content/resources/mit15_082jf10_lec16-1.md
+++ b/content/resources/mit15_082jf10_lec16-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about the network simplex algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/e048b527dca76980222bf258a30545f8_MIT15_082JF10_lec16.ppt
+file: /courses/15-082j-network-optimization-fall-2010/e048b527dca76980222bf258a30545f8_MIT15_082JF10_lec16.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec16.ppt
 uid: e048b527-dca7-6980-222b-f258a30545f8
 ---
+This resource contains information about the network simplex algorithm.
+
