--- a/content/resources/15-082jf10-th.md
+++ b/content/resources/15-082jf10-th.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/courses/15-082j-network-optimization-fall-2010/adf6703b8c86ace66ee3a15887804926_15-082jf10-th.jpg
+file: /courses/15-082j-network-optimization-fall-2010/adf6703b8c86ace66ee3a15887804926_15-082jf10-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Given demand, production capabilities, and costs of shipment, what is the
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 15-082jf10-th.jpg
 uid: adf6703b-8c86-ace6-6ee3-a15887804926
 ---
+New image Upload
+
