--- a/content/resources/15-082jf10.md
+++ b/content/resources/15-082jf10.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'Network representation of the transshipment problem. '
-file: /media/courses/15-082j-network-optimization-fall-2010/46e0640fbe139dc81923049424ef58a5_15-082jf10.jpg
+file: /courses/15-082j-network-optimization-fall-2010/46e0640fbe139dc81923049424ef58a5_15-082jf10.jpg
 file_type: image/jpeg
 image_metadata:
   caption: Given demand, production capabilities, and costs of shipment, what is the
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 15-082jf10.jpg
 uid: 46e0640f-be13-9dc8-1923-049424ef58a5
 ---
+Network representation of the transshipment problem. 
+
