--- a/content/resources/mit15_082jf10_assn02.md
+++ b/content/resources/mit15_082jf10_assn02.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: "This resource contains information related to Algorithm\_Design\_and\_\
   Analysis."
-file: /media/courses/15-082j-network-optimization-fall-2010/c3379e228d5eac8b3214616a0725a05b_MIT15_082JF10_assn02.pdf
+file: /courses/15-082j-network-optimization-fall-2010/c3379e228d5eac8b3214616a0725a05b_MIT15_082JF10_assn02.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_assn02.pdf
 uid: c3379e22-8d5e-ac8b-3214-616a0725a05b
 ---
+This resource contains information related to Algorithm Design and Analysis.
+
