--- a/content/resources/mit15_082jf10_assn04.md
+++ b/content/resources/mit15_082jf10_assn04.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: "This resource contains information related to Naive-Ford-Fulkerson.\r\
   \n"
-file: /media/courses/15-082j-network-optimization-fall-2010/74948293613efac98413ca6efb846918_MIT15_082JF10_assn04.pdf
+file: /courses/15-082j-network-optimization-fall-2010/74948293613efac98413ca6efb846918_MIT15_082JF10_assn04.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -14,3 +14,6 @@ resourcetype: Document
 title: MIT15_082JF10_assn04.pdf
 uid: 74948293-613e-fac9-8413-ca6efb846918
 ---
+This resource contains information related to Naive-Ford-Fulkerson.
+
+
