--- a/content/resources/mit15_082jf10_assn05.md
+++ b/content/resources/mit15_082jf10_assn05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: "This resource contains information related to online solutions of linear\
   \ programming, and Lagrangian relaxation.\r\n"
-file: /media/courses/15-082j-network-optimization-fall-2010/bb0efee01bd286dec40385bf205e7a4b_MIT15_082JF10_assn05.pdf
+file: /courses/15-082j-network-optimization-fall-2010/bb0efee01bd286dec40385bf205e7a4b_MIT15_082JF10_assn05.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -14,3 +14,6 @@ resourcetype: Document
 title: MIT15_082JF10_assn05.pdf
 uid: bb0efee0-1bd2-86de-c403-85bf205e7a4b
 ---
+This resource contains information related to online solutions of linear programming, and Lagrangian relaxation.
+
+
