--- a/content/resources/mit15_082jf10_av01-1.md
+++ b/content/resources/mit15_082jf10_av01-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about the breadth first search.
-file: /media/courses/15-082j-network-optimization-fall-2010/9f38af09dcb1fdcd4c98db9f05bcc196_MIT15_082JF10_av01.ppt
+file: /courses/15-082j-network-optimization-fall-2010/9f38af09dcb1fdcd4c98db9f05bcc196_MIT15_082JF10_av01.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av01.ppt
 uid: 9f38af09-dcb1-fdcd-4c98-db9f05bcc196
 ---
+This resource contains information about the breadth first search.
+
