--- a/content/resources/mit15_082jf10_av02-1.md
+++ b/content/resources/mit15_082jf10_av02-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information related to the depth first search.
-file: /media/courses/15-082j-network-optimization-fall-2010/b29f2aabe2ab6a8371113075f51af9b4_MIT15_082JF10_av02.ppt
+file: /courses/15-082j-network-optimization-fall-2010/b29f2aabe2ab6a8371113075f51af9b4_MIT15_082JF10_av02.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av02.ppt
 uid: b29f2aab-e2ab-6a83-7111-3075f51af9b4
 ---
+This resource contains the information related to the depth first search.
+
