--- a/content/resources/mit15_082jf10_av03-1.md
+++ b/content/resources/mit15_082jf10_av03-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains an information related to the topological ordering.
-file: /media/courses/15-082j-network-optimization-fall-2010/1e364d415838c36918b517e711542346_MIT15_082JF10_av03.ppt
+file: /courses/15-082j-network-optimization-fall-2010/1e364d415838c36918b517e711542346_MIT15_082JF10_av03.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av03.ppt
 uid: 1e364d41-5838-c369-18b5-17e711542346
 ---
+This resource contains an information related to the topological ordering.
+
