--- a/content/resources/mit15_082jf10_av04-1.md
+++ b/content/resources/mit15_082jf10_av04-1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information related to Eulerian cycles in directed
   graphs.
-file: /media/courses/15-082j-network-optimization-fall-2010/afa02b387e1ab813f08fa6de3c3e8eb1_MIT15_082JF10_av04.ppt
+file: /courses/15-082j-network-optimization-fall-2010/afa02b387e1ab813f08fa6de3c3e8eb1_MIT15_082JF10_av04.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_av04.ppt
 uid: afa02b38-7e1a-b813-f08f-a6de3c3e8eb1
 ---
+This resource contains information related to Eulerian cycles in directed graphs.
+
