--- a/content/resources/mit15_082jf10_av04.md
+++ b/content/resources/mit15_082jf10_av04.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information related to Eulerian cycles in directed
   graphs.
-file: /media/courses/15-082j-network-optimization-fall-2010/f08fa618f13e5dcf467e577c5008a12b_MIT15_082JF10_av04.pdf
+file: /courses/15-082j-network-optimization-fall-2010/f08fa618f13e5dcf467e577c5008a12b_MIT15_082JF10_av04.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_av04.pdf
 uid: f08fa618-f13e-5dcf-467e-577c5008a12b
 ---
+This resource contains information related to Eulerian cycles in directed graphs.
+
