--- a/content/resources/mit15_082jf10_av05-1.md
+++ b/content/resources/mit15_082jf10_av05-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'This resource contains the information related to the Flow decomposition. '
-file: /media/courses/15-082j-network-optimization-fall-2010/c0111da70f200524639f4b44087d3188_MIT15_082JF10_av05.ppt
+file: /courses/15-082j-network-optimization-fall-2010/c0111da70f200524639f4b44087d3188_MIT15_082JF10_av05.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av05.ppt
 uid: c0111da7-0f20-0524-639f-4b44087d3188
 ---
+This resource contains the information related to the Flow decomposition. 
+
