--- a/content/resources/mit15_082jf10_av05.md
+++ b/content/resources/mit15_082jf10_av05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information related to the Flow decomposition.
-file: /media/courses/15-082j-network-optimization-fall-2010/9cf7f895cffa18265dd0f24f78fcfb0d_MIT15_082JF10_av05.pdf
+file: /courses/15-082j-network-optimization-fall-2010/9cf7f895cffa18265dd0f24f78fcfb0d_MIT15_082JF10_av05.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: MIT15_082JF10_av05.pdf
 uid: 9cf7f895-cffa-1826-5dd0-f24f78fcfb0d
 ---
+This resource contains the information related to the Flow decomposition.
+
