--- a/content/resources/mit15_082jf10_av06-1.md
+++ b/content/resources/mit15_082jf10_av06-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information related to the Dijkstra's algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/a86f62c252731273f2b57ab9e917dadb_MIT15_082JF10_av06.ppt
+file: /courses/15-082j-network-optimization-fall-2010/a86f62c252731273f2b57ab9e917dadb_MIT15_082JF10_av06.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av06.ppt
 uid: a86f62c2-5273-1273-f2b5-7ab9e917dadb
 ---
+This resource contains the information related to the Dijkstra's algorithm.
+
