--- a/content/resources/mit15_082jf10_av06.md
+++ b/content/resources/mit15_082jf10_av06.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information related to the Dijkstra's algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/8583b2baf82b22b7ba72e724f5a323e9_MIT15_082JF10_av06.pdf
+file: /courses/15-082j-network-optimization-fall-2010/8583b2baf82b22b7ba72e724f5a323e9_MIT15_082JF10_av06.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: MIT15_082JF10_av06.pdf
 uid: 8583b2ba-f82b-22b7-ba72-e724f5a323e9
 ---
+This resource contains the information related to the Dijkstra's algorithm.
+
