--- a/content/resources/mit15_082jf10_av08-1.md
+++ b/content/resources/mit15_082jf10_av08-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information about 2-level bucket algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/babd782e96638ba870292bcd7b0ea81b_MIT15_082JF10_av08.ppt
+file: /courses/15-082j-network-optimization-fall-2010/babd782e96638ba870292bcd7b0ea81b_MIT15_082JF10_av08.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av08.ppt
 uid: babd782e-9663-8ba8-7029-2bcd7b0ea81b
 ---
+This resource contains the information about 2-level bucket algorithm.
+
