--- a/content/resources/mit15_082jf10_av08.md
+++ b/content/resources/mit15_082jf10_av08.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information about 2-level bucket algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/22ec377f9a464d338785e8fe5faa7d58_MIT15_082JF10_av08.pdf
+file: /courses/15-082j-network-optimization-fall-2010/22ec377f9a464d338785e8fe5faa7d58_MIT15_082JF10_av08.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: MIT15_082JF10_av08.pdf
 uid: 22ec377f-9a46-4d33-8785-e8fe5faa7d58
 ---
+This resource contains the information about 2-level bucket algorithm.
+
