--- a/content/resources/mit15_082jf10_av09.md
+++ b/content/resources/mit15_082jf10_av09.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information related to the Radix heap animation.
-file: /media/courses/15-082j-network-optimization-fall-2010/b9a6748a2d111ab5831efab32f6c47ff_MIT15_082JF10_av09.pdf
+file: /courses/15-082j-network-optimization-fall-2010/b9a6748a2d111ab5831efab32f6c47ff_MIT15_082JF10_av09.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: MIT15_082JF10_av09.pdf
 uid: b9a6748a-2d11-1ab5-831e-fab32f6c47ff
 ---
+This resource contains the information related to the Radix heap animation.
+
