--- a/content/resources/mit15_082jf10_av10.md
+++ b/content/resources/mit15_082jf10_av10.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains the information related to the label correcting
   algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/a68356f9eacc785afbd3549cb92ab672_MIT15_082JF10_av10.pdf
+file: /courses/15-082j-network-optimization-fall-2010/a68356f9eacc785afbd3549cb92ab672_MIT15_082JF10_av10.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_av10.pdf
 uid: a68356f9-eacc-785a-fbd3-549cb92ab672
 ---
+This resource contains the information related to the label correcting algorithm.
+
