--- a/content/resources/mit15_082jf10_av11-1.md
+++ b/content/resources/mit15_082jf10_av11-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource give the information about Modified label correcting algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/086f1e21b04dad09f595ffbf90aeb622_MIT15_082JF10_av11.ppt
+file: /courses/15-082j-network-optimization-fall-2010/086f1e21b04dad09f595ffbf90aeb622_MIT15_082JF10_av11.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av11.ppt
 uid: 086f1e21-b04d-ad09-f595-ffbf90aeb622
 ---
+This resource give the information about Modified label correcting algorithm.
+
