--- a/content/resources/mit15_082jf10_av11.md
+++ b/content/resources/mit15_082jf10_av11.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource give the information about Modified label correcting algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/1744c7679187419fe32ff30ffd500c80_MIT15_082JF10_av11.pdf
+file: /courses/15-082j-network-optimization-fall-2010/1744c7679187419fe32ff30ffd500c80_MIT15_082JF10_av11.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: MIT15_082JF10_av11.pdf
 uid: 1744c767-9187-419f-e32f-f30ffd500c80
 ---
+This resource give the information about Modified label correcting algorithm.
+
