--- a/content/resources/mit15_082jf10_av13.md
+++ b/content/resources/mit15_082jf10_av13.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource provides an information related to the Preflow push algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/3e6416175fd7afd74ced5eff741a40b9_MIT15_082JF10_av13.pdf
+file: /courses/15-082j-network-optimization-fall-2010/3e6416175fd7afd74ced5eff741a40b9_MIT15_082JF10_av13.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: MIT15_082JF10_av13.pdf
 uid: 3e641617-5fd7-afd7-4ced-5eff741a40b9
 ---
+This resource provides an information related to the Preflow push algorithm.
+
