--- a/content/resources/mit15_082jf10_av14.md
+++ b/content/resources/mit15_082jf10_av14.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains the information related to the Negative cycle
   algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/a91028424cba24db109e5d6f4ea7a835_MIT15_082JF10_av14.pdf
+file: /courses/15-082j-network-optimization-fall-2010/a91028424cba24db109e5d6f4ea7a835_MIT15_082JF10_av14.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_av14.pdf
 uid: a9102842-4cba-24db-109e-5d6f4ea7a835
 ---
+This resource contains the information related to the Negative cycle algorithm.
+
