--- a/content/resources/mit15_082jf10_av15.md
+++ b/content/resources/mit15_082jf10_av15.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource gives the information related to the successive shortest
   path (SSP) algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/296e833ef37a6fc21856f9a591fb5ae0_MIT15_082JF10_av15.pdf
+file: /courses/15-082j-network-optimization-fall-2010/296e833ef37a6fc21856f9a591fb5ae0_MIT15_082JF10_av15.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_av15.pdf
 uid: 296e833e-f37a-6fc2-1856-f9a591fb5ae0
 ---
+This resource gives the information related to the successive shortest path (SSP) algorithm.
+
