--- a/content/resources/mit15_082jf10_av16-1.md
+++ b/content/resources/mit15_082jf10_av16-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information related to Network simplex animations.
-file: /media/courses/15-082j-network-optimization-fall-2010/4149f268161c53f817162df5b5ac98a2_MIT15_082JF10_av16.ppt
+file: /courses/15-082j-network-optimization-fall-2010/4149f268161c53f817162df5b5ac98a2_MIT15_082JF10_av16.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Other
 title: MIT15_082JF10_av16.ppt
 uid: 4149f268-161c-53f8-1716-2df5b5ac98a2
 ---
+This resource contains the information related to Network simplex animations.
+
