--- a/content/resources/mit15_082jf10_av16.md
+++ b/content/resources/mit15_082jf10_av16.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains the information related to Network simplex animations.
-file: /media/courses/15-082j-network-optimization-fall-2010/c5bcf36657f3259400037eaceb5f5e69_MIT15_082JF10_av16.pdf
+file: /courses/15-082j-network-optimization-fall-2010/c5bcf36657f3259400037eaceb5f5e69_MIT15_082JF10_av16.pdf
 file_type: application/pdf
 learning_resource_types: []
 ocw_type: OCWFile
@@ -12,3 +12,5 @@ resourcetype: Document
 title: MIT15_082JF10_av16.pdf
 uid: c5bcf366-57f3-2594-0003-7eaceb5f5e69
 ---
+This resource contains the information related to Network simplex animations.
+
