--- a/content/resources/mit15_082jf10_lec01-1.md
+++ b/content/resources/mit15_082jf10_lec01-1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information about the introduction to network
   models.
-file: /media/courses/15-082j-network-optimization-fall-2010/ec15e9b253a8b4f13d950249432a092e_MIT15_082JF10_lec01.ppt
+file: /courses/15-082j-network-optimization-fall-2010/ec15e9b253a8b4f13d950249432a092e_MIT15_082JF10_lec01.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec01.ppt
 uid: ec15e9b2-53a8-b4f1-3d95-0249432a092e
 ---
+This resource contains information about the introduction to network models.
+
