--- a/content/resources/mit15_082jf10_lec01.md
+++ b/content/resources/mit15_082jf10_lec01.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information about the introduction to network
   models.
-file: /media/courses/15-082j-network-optimization-fall-2010/084aaba151e144f852e66099c7ea1213_MIT15_082JF10_lec01.pdf
+file: /courses/15-082j-network-optimization-fall-2010/084aaba151e144f852e66099c7ea1213_MIT15_082JF10_lec01.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec01.pdf
 uid: 084aaba1-51e1-44f8-52e6-6099c7ea1213
 ---
+This resource contains information about the introduction to network models.
+
