--- a/content/resources/mit15_082jf10_lec02-1.md
+++ b/content/resources/mit15_082jf10_lec02-1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource provides information related to computational complexity
   and data structures.
-file: /media/courses/15-082j-network-optimization-fall-2010/0cb97d32963a86562ebc6f88ceae7319_MIT15_082JF10_lec02.ppt
+file: /courses/15-082j-network-optimization-fall-2010/0cb97d32963a86562ebc6f88ceae7319_MIT15_082JF10_lec02.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec02.ppt
 uid: 0cb97d32-963a-8656-2ebc-6f88ceae7319
 ---
+This resource provides information related to computational complexity and data structures.
+
