--- a/content/resources/mit15_082jf10_lec02.md
+++ b/content/resources/mit15_082jf10_lec02.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource provides information related to computational complexity
   and data structures.
-file: /media/courses/15-082j-network-optimization-fall-2010/7bea14a27536e04897f2338cb1938144_MIT15_082JF10_lec02.pdf
+file: /courses/15-082j-network-optimization-fall-2010/7bea14a27536e04897f2338cb1938144_MIT15_082JF10_lec02.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec02.pdf
 uid: 7bea14a2-7536-e048-97f2-338cb1938144
 ---
+This resource provides information related to computational complexity and data structures.
+
