--- a/content/resources/mit15_082jf10_lec03-1.md
+++ b/content/resources/mit15_082jf10_lec03-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource provides information related to graph search algorithms.
-file: /media/courses/15-082j-network-optimization-fall-2010/cf7d00560c766dae742fc63b6979fdfc_MIT15_082JF10_lec03.ppt
+file: /courses/15-082j-network-optimization-fall-2010/cf7d00560c766dae742fc63b6979fdfc_MIT15_082JF10_lec03.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec03.ppt
 uid: cf7d0056-0c76-6dae-742f-c63b6979fdfc
 ---
+This resource provides information related to graph search algorithms.
+
