--- a/content/resources/mit15_082jf10_lec04-1.md
+++ b/content/resources/mit15_082jf10_lec04-1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource provides information related to transformations and flow
   decomposition.
-file: /media/courses/15-082j-network-optimization-fall-2010/865cbba041c80ae94a9133a2fdaf06d4_MIT15_082JF10_lec04.ppt
+file: /courses/15-082j-network-optimization-fall-2010/865cbba041c80ae94a9133a2fdaf06d4_MIT15_082JF10_lec04.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec04.ppt
 uid: 865cbba0-41c8-0ae9-4a91-33a2fdaf06d4
 ---
+This resource provides information related to transformations and flow decomposition.
+
