--- a/content/resources/mit15_082jf10_lec05.md
+++ b/content/resources/mit15_082jf10_lec05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource provides information related to shortest paths: label
   setting algorithms.'
-file: /media/courses/15-082j-network-optimization-fall-2010/d0d0157f8aad0ea926accdd22f863d85_MIT15_082JF10_lec05.pdf
+file: /courses/15-082j-network-optimization-fall-2010/d0d0157f8aad0ea926accdd22f863d85_MIT15_082JF10_lec05.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec05.pdf
 uid: d0d0157f-8aad-0ea9-26ac-cdd22f863d85
 ---
+This resource provides information related to shortest paths: label setting algorithms.
+
