--- a/content/resources/mit15_082jf10_lec06-1.md
+++ b/content/resources/mit15_082jf10_lec06-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource provides information related to the radix heap algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/9e96896791da5925cee2ae11228751fa_MIT15_082JF10_lec06.ppt
+file: /courses/15-082j-network-optimization-fall-2010/9e96896791da5925cee2ae11228751fa_MIT15_082JF10_lec06.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec06.ppt
 uid: 9e968967-91da-5925-cee2-ae11228751fa
 ---
+This resource provides information related to the radix heap algorithm.
+
