--- a/content/resources/mit15_082jf10_lec06.md
+++ b/content/resources/mit15_082jf10_lec06.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource provides information related to the radix heap algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/6852db65d4a72816ee86a35e0e546669_MIT15_082JF10_lec06.pdf
+file: /courses/15-082j-network-optimization-fall-2010/6852db65d4a72816ee86a35e0e546669_MIT15_082JF10_lec06.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec06.pdf
 uid: 6852db65-d4a7-2816-ee86-a35e0e546669
 ---
+This resource provides information related to the radix heap algorithm.
+
