--- a/content/resources/mit15_082jf10_lec07.md
+++ b/content/resources/mit15_082jf10_lec07.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to shortest paths: label
   correcting algorithms.'
-file: /media/courses/15-082j-network-optimization-fall-2010/614add9c5fbbca47c0ad5fa410ae985c_MIT15_082JF10_lec07.pdf
+file: /courses/15-082j-network-optimization-fall-2010/614add9c5fbbca47c0ad5fa410ae985c_MIT15_082JF10_lec07.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec07.pdf
 uid: 614add9c-5fbb-ca47-c0ad-5fa410ae985c
 ---
+This resource contains information related to shortest paths: label correcting algorithms.
+
