--- a/content/resources/mit15_082jf10_lec09.md
+++ b/content/resources/mit15_082jf10_lec09.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource provides information related to basic algorithms for the
   maximum flow problem.
-file: /media/courses/15-082j-network-optimization-fall-2010/f04ed4c62068421e1184f3114721713c_MIT15_082JF10_lec09.pdf
+file: /courses/15-082j-network-optimization-fall-2010/f04ed4c62068421e1184f3114721713c_MIT15_082JF10_lec09.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec09.pdf
 uid: f04ed4c6-2068-421e-1184-f3114721713c
 ---
+This resource provides information related to basic algorithms for the maximum flow problem.
+
