--- a/content/resources/mit15_082jf10_lec10-1.md
+++ b/content/resources/mit15_082jf10_lec10-1.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information regarding to combinatorial applications
   of maximum flows.
-file: /media/courses/15-082j-network-optimization-fall-2010/c5ce6adf28bb9698b5c72c7d5d22316b_MIT15_082JF10_lec10.ppt
+file: /courses/15-082j-network-optimization-fall-2010/c5ce6adf28bb9698b5c72c7d5d22316b_MIT15_082JF10_lec10.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec10.ppt
 uid: c5ce6adf-28bb-9698-b5c7-2c7d5d22316b
 ---
+This resource contains information regarding to combinatorial applications of maximum flows.
+
