--- a/content/resources/mit15_082jf10_lec10.md
+++ b/content/resources/mit15_082jf10_lec10.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information regarding to combinatorial applications
   of maximum flows.
-file: /media/courses/15-082j-network-optimization-fall-2010/a0613ed5a295ad7976afe33a7f888819_MIT15_082JF10_lec10.pdf
+file: /courses/15-082j-network-optimization-fall-2010/a0613ed5a295ad7976afe33a7f888819_MIT15_082JF10_lec10.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec10.pdf
 uid: a0613ed5-a295-ad79-76af-e33a7f888819
 ---
+This resource contains information regarding to combinatorial applications of maximum flows.
+
