--- a/content/resources/mit15_082jf10_lec11-1.md
+++ b/content/resources/mit15_082jf10_lec11-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to preflow push algorithms.
-file: /media/courses/15-082j-network-optimization-fall-2010/0ec5aafb912522fa3f539bc17f5a94f8_MIT15_082JF10_lec11.ppt
+file: /courses/15-082j-network-optimization-fall-2010/0ec5aafb912522fa3f539bc17f5a94f8_MIT15_082JF10_lec11.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec11.ppt
 uid: 0ec5aafb-9125-22fa-3f53-9bc17f5a94f8
 ---
+This resource contains information related to preflow push algorithms.
+
