--- a/content/resources/mit15_082jf10_lec11.md
+++ b/content/resources/mit15_082jf10_lec11.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to preflow push algorithms.
-file: /media/courses/15-082j-network-optimization-fall-2010/26a659cf280acd0fdd7f1e049779ddb7_MIT15_082JF10_lec11.pdf
+file: /courses/15-082j-network-optimization-fall-2010/26a659cf280acd0fdd7f1e049779ddb7_MIT15_082JF10_lec11.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec11.pdf
 uid: 26a659cf-280a-cd0f-dd7f-1e049779ddb7
 ---
+This resource contains information related to preflow push algorithms.
+
