--- a/content/resources/mit15_082jf10_lec12-1.md
+++ b/content/resources/mit15_082jf10_lec12-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource provides information related to more on preflow push algorithms.
-file: /media/courses/15-082j-network-optimization-fall-2010/ac8e7ad3ac3e01eddcc22dab7b0e0d5b_MIT15_082JF10_lec12.ppt
+file: /courses/15-082j-network-optimization-fall-2010/ac8e7ad3ac3e01eddcc22dab7b0e0d5b_MIT15_082JF10_lec12.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec12.ppt
 uid: ac8e7ad3-ac3e-01ed-dcc2-2dab7b0e0d5b
 ---
+This resource provides information related to more on preflow push algorithms.
+
