--- a/content/resources/mit15_082jf10_lec12.md
+++ b/content/resources/mit15_082jf10_lec12.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource provides information related to more on preflow push algorithms.
-file: /media/courses/15-082j-network-optimization-fall-2010/29f38b733da9df1d7618f2e784a62be1_MIT15_082JF10_lec12.pdf
+file: /courses/15-082j-network-optimization-fall-2010/29f38b733da9df1d7618f2e784a62be1_MIT15_082JF10_lec12.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec12.pdf
 uid: 29f38b73-3da9-df1d-7618-f2e784a62be1
 ---
+This resource provides information related to more on preflow push algorithms.
+
