--- a/content/resources/mit15_082jf10_lec13.md
+++ b/content/resources/mit15_082jf10_lec13.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information regarding to the minimum cost flow:
   basic algorithms.'
-file: /media/courses/15-082j-network-optimization-fall-2010/f4c38d706cbd5b88d880b47e3d3d7c77_MIT15_082JF10_lec13.pdf
+file: /courses/15-082j-network-optimization-fall-2010/f4c38d706cbd5b88d880b47e3d3d7c77_MIT15_082JF10_lec13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec13.pdf
 uid: f4c38d70-6cbd-5b88-d880-b47e3d3d7c77
 ---
+This resource contains information regarding to the minimum cost flow: basic algorithms.
+
