--- a/content/resources/mit15_082jf10_lec15.md
+++ b/content/resources/mit15_082jf10_lec15.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource provides information related to applications of network
   flows; Linear programming review.
-file: /media/courses/15-082j-network-optimization-fall-2010/87ee338a701dcd52784c86daef642113_MIT15_082JF10_lec15.pdf
+file: /courses/15-082j-network-optimization-fall-2010/87ee338a701dcd52784c86daef642113_MIT15_082JF10_lec15.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec15.pdf
 uid: 87ee338a-701d-cd52-784c-86daef642113
 ---
+This resource provides information related to applications of network flows; Linear programming review.
+
