--- a/content/resources/mit15_082jf10_lec16.md
+++ b/content/resources/mit15_082jf10_lec16.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information about the network simplex algorithm.
-file: /media/courses/15-082j-network-optimization-fall-2010/4f20b0870aa42b4272f8a7b33f27f5ab_MIT15_082JF10_lec16.pdf
+file: /courses/15-082j-network-optimization-fall-2010/4f20b0870aa42b4272f8a7b33f27f5ab_MIT15_082JF10_lec16.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec16.pdf
 uid: 4f20b087-0aa4-2b42-72f8-a7b33f27f5ab
 ---
+This resource contains information about the network simplex algorithm.
+
