--- a/content/resources/mit15_082jf10_lec19-1.md
+++ b/content/resources/mit15_082jf10_lec19-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to Lagrangian relaxation 1.
-file: /media/courses/15-082j-network-optimization-fall-2010/fd6408f56d25e4af4d8b364b4da3b4a3_MIT15_082JF10_lec19.ppt
+file: /courses/15-082j-network-optimization-fall-2010/fd6408f56d25e4af4d8b364b4da3b4a3_MIT15_082JF10_lec19.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec19.ppt
 uid: fd6408f5-6d25-e4af-4d8b-364b4da3b4a3
 ---
+This resource contains information related to Lagrangian relaxation 1.
+
