--- a/content/resources/mit15_082jf10_lec19.md
+++ b/content/resources/mit15_082jf10_lec19.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to Lagrangian relaxation 1.
-file: /media/courses/15-082j-network-optimization-fall-2010/20a632644cf3d882d4406294d4548f97_MIT15_082JF10_lec19.pdf
+file: /courses/15-082j-network-optimization-fall-2010/20a632644cf3d882d4406294d4548f97_MIT15_082JF10_lec19.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec19.pdf
 uid: 20a63264-4cf3-d882-d440-6294d4548f97
 ---
+This resource contains information related to Lagrangian relaxation 1.
+
