--- a/content/resources/mit15_082jf10_lec21-1.md
+++ b/content/resources/mit15_082jf10_lec21-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 1.
-file: /media/courses/15-082j-network-optimization-fall-2010/03d56b3894bd6223d0a9a879ecd869c4_MIT15_082JF10_lec21.ppt
+file: /courses/15-082j-network-optimization-fall-2010/03d56b3894bd6223d0a9a879ecd869c4_MIT15_082JF10_lec21.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec21.ppt
 uid: 03d56b38-94bd-6223-d0a9-a879ecd869c4
 ---
+This resource contains information related to Multicommodity flows 1.
+
