--- a/content/resources/mit15_082jf10_lec21.md
+++ b/content/resources/mit15_082jf10_lec21.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 1.
-file: /media/courses/15-082j-network-optimization-fall-2010/672666a612a42d5d828c9ff3b56130e2_MIT15_082JF10_lec21.pdf
+file: /courses/15-082j-network-optimization-fall-2010/672666a612a42d5d828c9ff3b56130e2_MIT15_082JF10_lec21.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec21.pdf
 uid: 672666a6-12a4-2d5d-828c-9ff3b56130e2
 ---
+This resource contains information related to Multicommodity flows 1.
+
