--- a/content/resources/mit15_082jf10_lec22-1.md
+++ b/content/resources/mit15_082jf10_lec22-1.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 2.
-file: /media/courses/15-082j-network-optimization-fall-2010/6969633224e4619bcf967f3ff4d3d9ad_MIT15_082JF10_lec22.ppt
+file: /courses/15-082j-network-optimization-fall-2010/6969633224e4619bcf967f3ff4d3d9ad_MIT15_082JF10_lec22.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Other
 title: MIT15_082JF10_lec22.ppt
 uid: 69696332-24e4-619b-cf96-7f3ff4d3d9ad
 ---
+This resource contains information related to Multicommodity flows 2.
+
