--- a/content/resources/mit15_082jf10_lec22.md
+++ b/content/resources/mit15_082jf10_lec22.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to Multicommodity flows 2.
-file: /media/courses/15-082j-network-optimization-fall-2010/8dfb047185c50dce4de39d02c375e020_MIT15_082JF10_lec22.pdf
+file: /courses/15-082j-network-optimization-fall-2010/8dfb047185c50dce4de39d02c375e020_MIT15_082JF10_lec22.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_082JF10_lec22.pdf
 uid: 8dfb0471-85c5-0dce-4de3-9d02c375e020
 ---
+This resource contains information related to Multicommodity flows 2.
+
