Sync all content

--- a/content/resources/15-082jf10-th.md
+++ b/content/resources/15-082jf10-th.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: ''
   image-alt: Network representation of a transshipment problem.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-082jf10-th.jpg
 uid: adf6703b-8c86-ace6-6ee3-a15887804926
 ---
 New image Upload
-
