--- a/content/resources/mit15_082jf10_assn01.md
+++ b/content/resources/mit15_082jf10_assn01.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/822b4fc41a04c499d789612240
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_assn01.pdf
 uid: 822b4fc4-1a04-c499-d789-612240315f61
 ---
 This resource contians the information regarding to Readings in AMO. 
-
