--- a/content/resources/mit15_082jf10_assn05.md
+++ b/content/resources/mit15_082jf10_assn05.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/bb0efee01bd286dec40385bf20
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -15,5 +16,3 @@ title: MIT15_082JF10_assn05.pdf
 uid: bb0efee0-1bd2-86de-c403-85bf205e7a4b
 ---
 This resource contains information related to online solutions of linear programming, and Lagrangian relaxation.
-
-
