--- a/content/resources/mit15_082jf10_av03-1.md
+++ b/content/resources/mit15_082jf10_av03-1.md
@@ -4,6 +4,7 @@ description: This resource contains an information related to the topological or
 file: /courses/15-082j-network-optimization-fall-2010/1e364d415838c36918b517e711542346_MIT15_082JF10_av03.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av03.ppt
 uid: 1e364d41-5838-c369-18b5-17e711542346
 ---
 This resource contains an information related to the topological ordering.
-
