--- a/content/resources/mit15_082jf10_av07-1.md
+++ b/content/resources/mit15_082jf10_av07-1.md
@@ -5,6 +5,7 @@ description: "This resource contains information about the Dial's algorithm.\r\n
 file: /courses/15-082j-network-optimization-fall-2010/3303e3323038f57724cd76b5f6f2db4a_MIT15_082JF10_av07.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -14,7 +15,5 @@ title: MIT15_082JF10_av07.ppt
 uid: 3303e332-3038-f577-24cd-76b5f6f2db4a
 ---
 This resource contains information about the Dial's algorithm.
-
-
 
 
