--- a/content/resources/mit15_082jf10_lec04-1.md
+++ b/content/resources/mit15_082jf10_lec04-1.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/865cbba041c80ae94a9133a2fd
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec04.ppt
 uid: 865cbba0-41c8-0ae9-4a91-33a2fdaf06d4
 ---
 This resource provides information related to transformations and flow decomposition.
-
