--- a/content/resources/mit15_082jf10_lec07.md
+++ b/content/resources/mit15_082jf10_lec07.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/614add9c5fbbca47c0ad5fa410
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec07.pdf
 uid: 614add9c-5fbb-ca47-c0ad-5fa410ae985c
 ---
 This resource contains information related to shortest paths: label correcting algorithms.
-
