--- a/content/resources/mit15_082jf10_lec08-1.md
+++ b/content/resources/mit15_082jf10_lec08-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/89a4f890ee77f2d7651695cc60
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec08.ppt
 uid: 89a4f890-ee77-f2d7-6516-95cc609aeed7
 ---
 This resource provides information related to Algorithm analysis.
-
