--- a/content/resources/mit15_082jf10_lec12-1.md
+++ b/content/resources/mit15_082jf10_lec12-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/ac8e7ad3ac3e01eddcc22dab7b
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec12.ppt
 uid: ac8e7ad3-ac3e-01ed-dcc2-2dab7b0e0d5b
 ---
 This resource provides information related to more on preflow push algorithms.
-
