--- a/content/resources/mit15_082jf10_lec20.md
+++ b/content/resources/mit15_082jf10_lec20.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/3e3ce04fd199c68fefef5fd980
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec20.pdf
 uid: 3e3ce04f-d199-c68f-efef-5fd980112774
 ---
 This resource contains information related to Lagrangian relaxation 2.
-
