--- a/content/resources/mit15_082jf10_lec21.md
+++ b/content/resources/mit15_082jf10_lec21.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/672666a612a42d5d828c9ff3b5
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec21.pdf
 uid: 672666a6-12a4-2d5d-828c-9ff3b56130e2
 ---
 This resource contains information related to Multicommodity flows 1.
-
