--- a/content/resources/mit15_082jf10_lec22-1.md
+++ b/content/resources/mit15_082jf10_lec22-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/6969633224e4619bcf967f3ff4
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec22.ppt
 uid: 69696332-24e4-619b-cf96-7f3ff4d3d9ad
 ---
 This resource contains information related to Multicommodity flows 2.
-
