--- a/content/resources/15-082jf10.md
+++ b/content/resources/15-082jf10.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: Image by Prof. Orlin
   image-alt: Network representation of a transshipment problem.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-082jf10.jpg
 uid: 46e0640f-be13-9dc8-1923-049424ef58a5
 ---
 Network representation of the transshipment problem. 
-
