--- a/content/resources/mit15_082jf10_assn02.md
+++ b/content/resources/mit15_082jf10_assn02.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/c3379e228d5eac8b3214616a07
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_assn02.pdf
 uid: c3379e22-8d5e-ac8b-3214-616a0725a05b
 ---
 This resource contains information related to Algorithm Design and Analysis.
-
