--- a/content/resources/mit15_082jf10_assn03.md
+++ b/content/resources/mit15_082jf10_assn03.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/3f01736f9c5b57bff854b86f18
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_assn03.pdf
 uid: 3f01736f-9c5b-57bf-f854-b86f1853faa4
 ---
 This resource contains information related to Maximum Flows: Basic Ideas.
-
