--- a/content/resources/mit15_082jf10_assn04.md
+++ b/content/resources/mit15_082jf10_assn04.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/74948293613efac98413ca6efb
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -15,5 +16,3 @@ title: MIT15_082JF10_assn04.pdf
 uid: 74948293-613e-fac9-8413-ca6efb846918
 ---
 This resource contains information related to Naive-Ford-Fulkerson.
-
-
