--- a/content/resources/mit15_082jf10_av01-1.md
+++ b/content/resources/mit15_082jf10_av01-1.md
@@ -4,6 +4,7 @@ description: This resource contains information about the breadth first search.
 file: /courses/15-082j-network-optimization-fall-2010/9f38af09dcb1fdcd4c98db9f05bcc196_MIT15_082JF10_av01.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av01.ppt
 uid: 9f38af09-dcb1-fdcd-4c98-db9f05bcc196
 ---
 This resource contains information about the breadth first search.
-
