--- a/content/resources/mit15_082jf10_av01.md
+++ b/content/resources/mit15_082jf10_av01.md
@@ -4,6 +4,7 @@ description: This resource contains information about the breadth first search.
 file: /courses/15-082j-network-optimization-fall-2010/f2c389184787356f1ad48e243b742524_MIT15_082JF10_av01.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av01.pdf
 uid: f2c38918-4787-356f-1ad4-8e243b742524
 ---
 This resource contains information about the breadth first search.
-
