--- a/content/resources/mit15_082jf10_av02-1.md
+++ b/content/resources/mit15_082jf10_av02-1.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to the depth first s
 file: /courses/15-082j-network-optimization-fall-2010/b29f2aabe2ab6a8371113075f51af9b4_MIT15_082JF10_av02.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av02.ppt
 uid: b29f2aab-e2ab-6a83-7111-3075f51af9b4
 ---
 This resource contains the information related to the depth first search.
-
