--- a/content/resources/mit15_082jf10_av02.md
+++ b/content/resources/mit15_082jf10_av02.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to the depth first s
 file: /courses/15-082j-network-optimization-fall-2010/b4562022bb8f16926f616abfe79da8e5_MIT15_082JF10_av02.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av02.pdf
 uid: b4562022-bb8f-1692-6f61-6abfe79da8e5
 ---
 This resource contains the information related to the depth first search.
-
