--- a/content/resources/mit15_082jf10_av03.md
+++ b/content/resources/mit15_082jf10_av03.md
@@ -4,6 +4,7 @@ description: This resource contains an information related to the topological or
 file: /courses/15-082j-network-optimization-fall-2010/33ac06b890732e57a7f08b5fa94c99a4_MIT15_082JF10_av03.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av03.pdf
 uid: 33ac06b8-9073-2e57-a7f0-8b5fa94c99a4
 ---
 This resource contains an information related to the topological ordering.
-
