--- a/content/resources/mit15_082jf10_av04.md
+++ b/content/resources/mit15_082jf10_av04.md
@@ -5,6 +5,7 @@ description: This resource contains information related to Eulerian cycles in di
 file: /courses/15-082j-network-optimization-fall-2010/f08fa618f13e5dcf467e577c5008a12b_MIT15_082JF10_av04.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_av04.pdf
 uid: f08fa618-f13e-5dcf-467e-577c5008a12b
 ---
 This resource contains information related to Eulerian cycles in directed graphs.
-
