--- a/content/resources/mit15_082jf10_av05-1.md
+++ b/content/resources/mit15_082jf10_av05-1.md
@@ -4,6 +4,7 @@ description: 'This resource contains the information related to the Flow decompo
 file: /courses/15-082j-network-optimization-fall-2010/c0111da70f200524639f4b44087d3188_MIT15_082JF10_av05.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av05.ppt
 uid: c0111da7-0f20-0524-639f-4b44087d3188
 ---
 This resource contains the information related to the Flow decomposition. 
-
