--- a/content/resources/mit15_082jf10_av05.md
+++ b/content/resources/mit15_082jf10_av05.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to the Flow decompos
 file: /courses/15-082j-network-optimization-fall-2010/9cf7f895cffa18265dd0f24f78fcfb0d_MIT15_082JF10_av05.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av05.pdf
 uid: 9cf7f895-cffa-1826-5dd0-f24f78fcfb0d
 ---
 This resource contains the information related to the Flow decomposition.
-
