--- a/content/resources/mit15_082jf10_av06-1.md
+++ b/content/resources/mit15_082jf10_av06-1.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to the Dijkstra's al
 file: /courses/15-082j-network-optimization-fall-2010/a86f62c252731273f2b57ab9e917dadb_MIT15_082JF10_av06.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av06.ppt
 uid: a86f62c2-5273-1273-f2b5-7ab9e917dadb
 ---
 This resource contains the information related to the Dijkstra's algorithm.
-
