--- a/content/resources/mit15_082jf10_av07.md
+++ b/content/resources/mit15_082jf10_av07.md
@@ -4,6 +4,7 @@ description: This resource contains information about the Dial's algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/e2c8d959ca429b9d4e3c2481e0fd848c_MIT15_082JF10_av07.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av07.pdf
 uid: e2c8d959-ca42-9b9d-4e3c-2481e0fd848c
 ---
 This resource contains information about the Dial's algorithm.
-
