--- a/content/resources/mit15_082jf10_av08-1.md
+++ b/content/resources/mit15_082jf10_av08-1.md
@@ -4,6 +4,7 @@ description: This resource contains the information about 2-level bucket algorit
 file: /courses/15-082j-network-optimization-fall-2010/babd782e96638ba870292bcd7b0ea81b_MIT15_082JF10_av08.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av08.ppt
 uid: babd782e-9663-8ba8-7029-2bcd7b0ea81b
 ---
 This resource contains the information about 2-level bucket algorithm.
-
