--- a/content/resources/mit15_082jf10_av08.md
+++ b/content/resources/mit15_082jf10_av08.md
@@ -4,6 +4,7 @@ description: This resource contains the information about 2-level bucket algorit
 file: /courses/15-082j-network-optimization-fall-2010/22ec377f9a464d338785e8fe5faa7d58_MIT15_082JF10_av08.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av08.pdf
 uid: 22ec377f-9a46-4d33-8785-e8fe5faa7d58
 ---
 This resource contains the information about 2-level bucket algorithm.
-
