--- a/content/resources/mit15_082jf10_av09-1.md
+++ b/content/resources/mit15_082jf10_av09-1.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to the Radix heap an
 file: /courses/15-082j-network-optimization-fall-2010/d79942002772a4670655dfdd0ae5242e_MIT15_082JF10_av09.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av09.ppt
 uid: d7994200-2772-a467-0655-dfdd0ae5242e
 ---
 This resource contains the information related to the Radix heap animation.
-
