--- a/content/resources/mit15_082jf10_av09.md
+++ b/content/resources/mit15_082jf10_av09.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to the Radix heap an
 file: /courses/15-082j-network-optimization-fall-2010/b9a6748a2d111ab5831efab32f6c47ff_MIT15_082JF10_av09.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av09.pdf
 uid: b9a6748a-2d11-1ab5-831e-fab32f6c47ff
 ---
 This resource contains the information related to the Radix heap animation.
-
