--- a/content/resources/mit15_082jf10_av10-1.md
+++ b/content/resources/mit15_082jf10_av10-1.md
@@ -5,6 +5,7 @@ description: This resource contains the information related to the label correct
 file: /courses/15-082j-network-optimization-fall-2010/5d644b73336f57583bb0de647ea20f28_MIT15_082JF10_av10.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_av10.ppt
 uid: 5d644b73-336f-5758-3bb0-de647ea20f28
 ---
 This resource contains the information related to the label correcting algorithm.
-
