--- a/content/resources/mit15_082jf10_av10.md
+++ b/content/resources/mit15_082jf10_av10.md
@@ -5,6 +5,7 @@ description: This resource contains the information related to the label correct
 file: /courses/15-082j-network-optimization-fall-2010/a68356f9eacc785afbd3549cb92ab672_MIT15_082JF10_av10.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_av10.pdf
 uid: a68356f9-eacc-785a-fbd3-549cb92ab672
 ---
 This resource contains the information related to the label correcting algorithm.
-
