--- a/content/resources/mit15_082jf10_av11-1.md
+++ b/content/resources/mit15_082jf10_av11-1.md
@@ -4,6 +4,7 @@ description: This resource give the information about Modified label correcting 
 file: /courses/15-082j-network-optimization-fall-2010/086f1e21b04dad09f595ffbf90aeb622_MIT15_082JF10_av11.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av11.ppt
 uid: 086f1e21-b04d-ad09-f595-ffbf90aeb622
 ---
 This resource give the information about Modified label correcting algorithm.
-
