--- a/content/resources/mit15_082jf10_av11.md
+++ b/content/resources/mit15_082jf10_av11.md
@@ -4,6 +4,7 @@ description: This resource give the information about Modified label correcting 
 file: /courses/15-082j-network-optimization-fall-2010/1744c7679187419fe32ff30ffd500c80_MIT15_082JF10_av11.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av11.pdf
 uid: 1744c767-9187-419f-e32f-f30ffd500c80
 ---
 This resource give the information about Modified label correcting algorithm.
-
