--- a/content/resources/mit15_082jf10_av12-1.md
+++ b/content/resources/mit15_082jf10_av12-1.md
@@ -4,6 +4,7 @@ description: This resource gives the information about the Ford-Fulkerson algori
 file: /courses/15-082j-network-optimization-fall-2010/6c43f0c60fad33a2b5ac29f9ec0bb52f_MIT15_082JF10_av12.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av12.ppt
 uid: 6c43f0c6-0fad-33a2-b5ac-29f9ec0bb52f
 ---
 This resource gives the information about the Ford-Fulkerson algorithm.
-
