--- a/content/resources/mit15_082jf10_av12.md
+++ b/content/resources/mit15_082jf10_av12.md
@@ -4,6 +4,7 @@ description: This resource gives the information about the Ford-Fulkerson algori
 file: /courses/15-082j-network-optimization-fall-2010/fcbf2ec30c24273822486064f4896231_MIT15_082JF10_av12.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av12.pdf
 uid: fcbf2ec3-0c24-2738-2248-6064f4896231
 ---
 This resource gives the information about the Ford-Fulkerson algorithm.
-
