--- a/content/resources/mit15_082jf10_av13-1.md
+++ b/content/resources/mit15_082jf10_av13-1.md
@@ -4,6 +4,7 @@ description: This resource provides an information related to the Preflow push a
 file: /courses/15-082j-network-optimization-fall-2010/32cfc77b8d435cb98fb027f763c8a469_MIT15_082JF10_av13.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av13.ppt
 uid: 32cfc77b-8d43-5cb9-8fb0-27f763c8a469
 ---
 This resource provides an information related to the Preflow push algorithm.
-
