--- a/content/resources/mit15_082jf10_av13.md
+++ b/content/resources/mit15_082jf10_av13.md
@@ -4,6 +4,7 @@ description: This resource provides an information related to the Preflow push a
 file: /courses/15-082j-network-optimization-fall-2010/3e6416175fd7afd74ced5eff741a40b9_MIT15_082JF10_av13.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av13.pdf
 uid: 3e641617-5fd7-afd7-4ced-5eff741a40b9
 ---
 This resource provides an information related to the Preflow push algorithm.
-
