--- a/content/resources/mit15_082jf10_av14.md
+++ b/content/resources/mit15_082jf10_av14.md
@@ -5,6 +5,7 @@ description: This resource contains the information related to the Negative cycl
 file: /courses/15-082j-network-optimization-fall-2010/a91028424cba24db109e5d6f4ea7a835_MIT15_082JF10_av14.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_av14.pdf
 uid: a9102842-4cba-24db-109e-5d6f4ea7a835
 ---
 This resource contains the information related to the Negative cycle algorithm.
-
