--- a/content/resources/mit15_082jf10_av15-1.md
+++ b/content/resources/mit15_082jf10_av15-1.md
@@ -5,6 +5,7 @@ description: This resource gives the information related to the successive short
 file: /courses/15-082j-network-optimization-fall-2010/4ebfe5931486dc522b488406f6bf6e57_MIT15_082JF10_av15.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_av15.ppt
 uid: 4ebfe593-1486-dc52-2b48-8406f6bf6e57
 ---
 This resource gives the information related to the successive shortest path (SSP) algorithm.
-
