--- a/content/resources/mit15_082jf10_av15.md
+++ b/content/resources/mit15_082jf10_av15.md
@@ -5,6 +5,7 @@ description: This resource gives the information related to the successive short
 file: /courses/15-082j-network-optimization-fall-2010/296e833ef37a6fc21856f9a591fb5ae0_MIT15_082JF10_av15.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_av15.pdf
 uid: 296e833e-f37a-6fc2-1856-f9a591fb5ae0
 ---
 This resource gives the information related to the successive shortest path (SSP) algorithm.
-
