--- a/content/resources/mit15_082jf10_av16-1.md
+++ b/content/resources/mit15_082jf10_av16-1.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to Network simplex a
 file: /courses/15-082j-network-optimization-fall-2010/4149f268161c53f817162df5b5ac98a2_MIT15_082JF10_av16.ppt
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av16.ppt
 uid: 4149f268-161c-53f8-1716-2df5b5ac98a2
 ---
 This resource contains the information related to Network simplex animations.
-
