--- a/content/resources/mit15_082jf10_av16.md
+++ b/content/resources/mit15_082jf10_av16.md
@@ -4,6 +4,7 @@ description: This resource contains the information related to Network simplex a
 file: /courses/15-082j-network-optimization-fall-2010/c5bcf36657f3259400037eaceb5f5e69_MIT15_082JF10_av16.pdf
 file_type: application/pdf
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Animations
 parent_type: CourseSection
@@ -13,4 +14,3 @@ title: MIT15_082JF10_av16.pdf
 uid: c5bcf366-57f3-2594-0003-7eaceb5f5e69
 ---
 This resource contains the information related to Network simplex animations.
-
