--- a/content/resources/mit15_082jf10_lec01-1.md
+++ b/content/resources/mit15_082jf10_lec01-1.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/ec15e9b253a8b4f13d95024943
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec01.ppt
 uid: ec15e9b2-53a8-b4f1-3d95-0249432a092e
 ---
 This resource contains information about the introduction to network models.
-
