--- a/content/resources/mit15_082jf10_lec02.md
+++ b/content/resources/mit15_082jf10_lec02.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/7bea14a27536e04897f2338cb1
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec02.pdf
 uid: 7bea14a2-7536-e048-97f2-338cb1938144
 ---
 This resource provides information related to computational complexity and data structures.
-
