--- a/content/resources/mit15_082jf10_lec04.md
+++ b/content/resources/mit15_082jf10_lec04.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/0911d1fe02b68af5127a53657f
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec04.pdf
 uid: 0911d1fe-02b6-8af5-127a-53657f25b5a8
 ---
 This resource provides information related to transformations and flow decomposition.
-
