--- a/content/resources/mit15_082jf10_lec05-1.md
+++ b/content/resources/mit15_082jf10_lec05-1.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/2eb831f85e01c25c93e237ad06
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec05.ppt
 uid: 2eb831f8-5e01-c25c-93e2-37ad0648f0c1
 ---
 This resource provides information related to shortest paths: label setting algorithms.
-
