--- a/content/resources/mit15_082jf10_lec05.md
+++ b/content/resources/mit15_082jf10_lec05.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/d0d0157f8aad0ea926accdd22f
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec05.pdf
 uid: d0d0157f-8aad-0ea9-26ac-cdd22f863d85
 ---
 This resource provides information related to shortest paths: label setting algorithms.
-
