--- a/content/resources/mit15_082jf10_lec06-1.md
+++ b/content/resources/mit15_082jf10_lec06-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/9e96896791da5925cee2ae1122
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec06.ppt
 uid: 9e968967-91da-5925-cee2-ae11228751fa
 ---
 This resource provides information related to the radix heap algorithm.
-
