--- a/content/resources/mit15_082jf10_lec08.md
+++ b/content/resources/mit15_082jf10_lec08.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/037acef4ee17c444a2cdbe9ef8
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec08.pdf
 uid: 037acef4-ee17-c444-a2cd-be9ef873a11b
 ---
 This resource provides information related to Algorithm analysis.
-
