--- a/content/resources/mit15_082jf10_lec09.md
+++ b/content/resources/mit15_082jf10_lec09.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/f04ed4c62068421e1184f31147
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec09.pdf
 uid: f04ed4c6-2068-421e-1184-f3114721713c
 ---
 This resource provides information related to basic algorithms for the maximum flow problem.
-
