--- a/content/resources/mit15_082jf10_lec10-1.md
+++ b/content/resources/mit15_082jf10_lec10-1.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/c5ce6adf28bb9698b5c72c7d5d
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec10.ppt
 uid: c5ce6adf-28bb-9698-b5c7-2c7d5d22316b
 ---
 This resource contains information regarding to combinatorial applications of maximum flows.
-
