--- a/content/resources/mit15_082jf10_lec10.md
+++ b/content/resources/mit15_082jf10_lec10.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/a0613ed5a295ad7976afe33a7f
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec10.pdf
 uid: a0613ed5-a295-ad79-76af-e33a7f888819
 ---
 This resource contains information regarding to combinatorial applications of maximum flows.
-
