--- a/content/resources/mit15_082jf10_lec11-1.md
+++ b/content/resources/mit15_082jf10_lec11-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/0ec5aafb912522fa3f539bc17f
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec11.ppt
 uid: 0ec5aafb-9125-22fa-3f53-9bc17f5a94f8
 ---
 This resource contains information related to preflow push algorithms.
-
