--- a/content/resources/mit15_082jf10_lec11.md
+++ b/content/resources/mit15_082jf10_lec11.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/26a659cf280acd0fdd7f1e0497
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec11.pdf
 uid: 26a659cf-280a-cd0f-dd7f-1e049779ddb7
 ---
 This resource contains information related to preflow push algorithms.
-
