--- a/content/resources/mit15_082jf10_lec12.md
+++ b/content/resources/mit15_082jf10_lec12.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/29f38b733da9df1d7618f2e784
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec12.pdf
 uid: 29f38b73-3da9-df1d-7618-f2e784a62be1
 ---
 This resource provides information related to more on preflow push algorithms.
-
