--- a/content/resources/mit15_082jf10_lec14-1.md
+++ b/content/resources/mit15_082jf10_lec14-1.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/35734f3a96983e590c207a6d7b
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec14.ppt
 uid: 35734f3a-9698-3e59-0c20-7a6d7be54eb9
 ---
 This resource contains information for minimum cost flow: polynomial time algorithms.
-
