--- a/content/resources/mit15_082jf10_lec14.md
+++ b/content/resources/mit15_082jf10_lec14.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/65522276ac3b45b8f317cb423f
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec14.pdf
 uid: 65522276-ac3b-45b8-f317-cb423f6e9187
 ---
 This resource contains information for minimum cost flow: polynomial time algorithms.
-
