--- a/content/resources/mit15_082jf10_lec15-1.md
+++ b/content/resources/mit15_082jf10_lec15-1.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/56433055049c206d3f80eb96aa
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec15.ppt
 uid: 56433055-049c-206d-3f80-eb96aac98107
 ---
 This resource provides information related to applications of network flows; Linear programming review.
-
