--- a/content/resources/mit15_082jf10_lec15.md
+++ b/content/resources/mit15_082jf10_lec15.md
@@ -6,6 +6,7 @@ file: /courses/15-082j-network-optimization-fall-2010/87ee338a701dcd52784c86daef
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_082JF10_lec15.pdf
 uid: 87ee338a-701d-cd52-784c-86daef642113
 ---
 This resource provides information related to applications of network flows; Linear programming review.
-
