--- a/content/resources/mit15_082jf10_lec16-1.md
+++ b/content/resources/mit15_082jf10_lec16-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/e048b527dca76980222bf258a3
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec16.ppt
 uid: e048b527-dca7-6980-222b-f258a30545f8
 ---
 This resource contains information about the network simplex algorithm.
-
