--- a/content/resources/mit15_082jf10_lec16.md
+++ b/content/resources/mit15_082jf10_lec16.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/4f20b0870aa42b4272f8a7b33f
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec16.pdf
 uid: 4f20b087-0aa4-2b42-72f8-a7b33f27f5ab
 ---
 This resource contains information about the network simplex algorithm.
-
