--- a/content/resources/mit15_082jf10_lec19.md
+++ b/content/resources/mit15_082jf10_lec19.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/20a632644cf3d882d4406294d4
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec19.pdf
 uid: 20a63264-4cf3-d882-d440-6294d4548f97
 ---
 This resource contains information related to Lagrangian relaxation 1.
-
