--- a/content/resources/mit15_082jf10_lec20-1.md
+++ b/content/resources/mit15_082jf10_lec20-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/940e3bddc40d3e40f849b12dc3
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec20.ppt
 uid: 940e3bdd-c40d-3e40-f849-b12dc3d5aec1
 ---
 This resource contains information related to Lagrangian relaxation 2.
-
