--- a/content/resources/mit15_082jf10_lec21-1.md
+++ b/content/resources/mit15_082jf10_lec21-1.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/03d56b3894bd6223d0a9a879ec
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec21.ppt
 uid: 03d56b38-94bd-6223-d0a9-a879ecd869c4
 ---
 This resource contains information related to Multicommodity flows 1.
-
