--- a/content/resources/mit15_082jf10_lec22.md
+++ b/content/resources/mit15_082jf10_lec22.md
@@ -5,6 +5,7 @@ file: /courses/15-082j-network-optimization-fall-2010/8dfb047185c50dce4de39d02c3
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_082JF10_lec22.pdf
 uid: 8dfb0471-85c5-0dce-4de3-9d02c375e020
 ---
 This resource contains information related to Multicommodity flows 2.
-
