Sync all content

--- a/content/resources/mit15_082jf10_assn03.md
+++ b/content/resources/mit15_082jf10_assn03.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to Maximum Flows: Basic Ideas.'
 file: /courses/15-082j-network-optimization-fall-2010/3f01736f9c5b57bff854b86f1853faa4_MIT15_082JF10_assn03.pdf
+file_size: 40245
 file_type: application/pdf
 learning_resource_types:
 - Assignments
