--- a/content/resources/mit15_082jf10_av05-1.md
+++ b/content/resources/mit15_082jf10_av05-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'This resource contains the information related to the Flow decomposition. '
 file: /courses/15-082j-network-optimization-fall-2010/c0111da70f200524639f4b44087d3188_MIT15_082JF10_av05.ppt
+file_size: 582656
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
