--- a/content/resources/mit15_082jf10_av09-1.md
+++ b/content/resources/mit15_082jf10_av09-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the information related to the Radix heap animation.
 file: /courses/15-082j-network-optimization-fall-2010/d79942002772a4670655dfdd0ae5242e_MIT15_082JF10_av09.ppt
+file_size: 919552
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
