--- a/content/resources/mit15_082jf10_lec21-1.md
+++ b/content/resources/mit15_082jf10_lec21-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information related to Multicommodity flows 1.
 file: /courses/15-082j-network-optimization-fall-2010/03d56b3894bd6223d0a9a879ecd869c4_MIT15_082JF10_lec21.ppt
+file_size: 818688
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
