--- a/content/resources/15-082jf10-th.md
+++ b/content/resources/15-082jf10-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/15-082j-network-optimization-fall-2010/adf6703b8c86ace66ee3a15887804926_15-082jf10-th.jpg
+file_size: 9667
 file_type: image/jpeg
 image_metadata:
   caption: Given demand, production capabilities, and costs of shipment, what is the
