--- a/content/resources/mit15_082jf10_assn01.md
+++ b/content/resources/mit15_082jf10_assn01.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'This resource contians the information regarding to Readings in AMO. '
 file: /courses/15-082j-network-optimization-fall-2010/822b4fc41a04c499d789612240315f61_MIT15_082JF10_assn01.pdf
+file_size: 89382
 file_type: application/pdf
 learning_resource_types:
 - Assignments
