--- a/content/resources/mit15_082jf10_assn04.md
+++ b/content/resources/mit15_082jf10_assn04.md
@@ -3,6 +3,7 @@ content_type: resource
 description: "This resource contains information related to Naive-Ford-Fulkerson.\r\
   \n"
 file: /courses/15-082j-network-optimization-fall-2010/74948293613efac98413ca6efb846918_MIT15_082JF10_assn04.pdf
+file_size: 65737
 file_type: application/pdf
 learning_resource_types:
 - Assignments
