--- a/content/resources/mit15_082jf10_av01.md
+++ b/content/resources/mit15_082jf10_av01.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information about the breadth first search.
 file: /courses/15-082j-network-optimization-fall-2010/f2c389184787356f1ad48e243b742524_MIT15_082JF10_av01.pdf
+file_size: 447429
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
