--- a/content/resources/mit15_082jf10_av02-1.md
+++ b/content/resources/mit15_082jf10_av02-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the information related to the depth first search.
 file: /courses/15-082j-network-optimization-fall-2010/b29f2aabe2ab6a8371113075f51af9b4_MIT15_082JF10_av02.ppt
+file_size: 2180608
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
