--- a/content/resources/mit15_082jf10_av02.md
+++ b/content/resources/mit15_082jf10_av02.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the information related to the depth first search.
 file: /courses/15-082j-network-optimization-fall-2010/b4562022bb8f16926f616abfe79da8e5_MIT15_082JF10_av02.pdf
+file_size: 663971
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
