--- a/content/resources/mit15_082jf10_av04.md
+++ b/content/resources/mit15_082jf10_av04.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains information related to Eulerian cycles in directed
   graphs.
 file: /courses/15-082j-network-optimization-fall-2010/f08fa618f13e5dcf467e577c5008a12b_MIT15_082JF10_av04.pdf
+file_size: 249473
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
