--- a/content/resources/mit15_082jf10_av05.md
+++ b/content/resources/mit15_082jf10_av05.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the information related to the Flow decomposition.
 file: /courses/15-082j-network-optimization-fall-2010/9cf7f895cffa18265dd0f24f78fcfb0d_MIT15_082JF10_av05.pdf
+file_size: 262031
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
