--- a/content/resources/mit15_082jf10_av07.md
+++ b/content/resources/mit15_082jf10_av07.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information about the Dial's algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/e2c8d959ca429b9d4e3c2481e0fd848c_MIT15_082JF10_av07.pdf
+file_size: 302917
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
