--- a/content/resources/mit15_082jf10_av08-1.md
+++ b/content/resources/mit15_082jf10_av08-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the information about 2-level bucket algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/babd782e96638ba870292bcd7b0ea81b_MIT15_082JF10_av08.ppt
+file_size: 1630720
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
