--- a/content/resources/mit15_082jf10_av11-1.md
+++ b/content/resources/mit15_082jf10_av11-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource give the information about Modified label correcting algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/086f1e21b04dad09f595ffbf90aeb622_MIT15_082JF10_av11.ppt
+file_size: 707072
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
