--- a/content/resources/mit15_082jf10_av11.md
+++ b/content/resources/mit15_082jf10_av11.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource give the information about Modified label correcting algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/1744c7679187419fe32ff30ffd500c80_MIT15_082JF10_av11.pdf
+file_size: 307900
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
