--- a/content/resources/mit15_082jf10_av12.md
+++ b/content/resources/mit15_082jf10_av12.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource gives the information about the Ford-Fulkerson algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/fcbf2ec30c24273822486064f4896231_MIT15_082JF10_av12.pdf
+file_size: 353661
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
