--- a/content/resources/mit15_082jf10_av13-1.md
+++ b/content/resources/mit15_082jf10_av13-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource provides an information related to the Preflow push algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/32cfc77b8d435cb98fb027f763c8a469_MIT15_082JF10_av13.ppt
+file_size: 1182720
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
