--- a/content/resources/mit15_082jf10_av13.md
+++ b/content/resources/mit15_082jf10_av13.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource provides an information related to the Preflow push algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/3e6416175fd7afd74ced5eff741a40b9_MIT15_082JF10_av13.pdf
+file_size: 410201
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
