--- a/content/resources/mit15_082jf10_av14.md
+++ b/content/resources/mit15_082jf10_av14.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource contains the information related to the Negative cycle
   algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/a91028424cba24db109e5d6f4ea7a835_MIT15_082JF10_av14.pdf
+file_size: 274764
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
