--- a/content/resources/mit15_082jf10_av16-1.md
+++ b/content/resources/mit15_082jf10_av16-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the information related to Network simplex animations.
 file: /courses/15-082j-network-optimization-fall-2010/4149f268161c53f817162df5b5ac98a2_MIT15_082JF10_av16.ppt
+file_size: 1136128
 file_type: application/vnd.ms-powerpoint
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
