--- a/content/resources/mit15_082jf10_av16.md
+++ b/content/resources/mit15_082jf10_av16.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains the information related to Network simplex animations.
 file: /courses/15-082j-network-optimization-fall-2010/c5bcf36657f3259400037eaceb5f5e69_MIT15_082JF10_av16.pdf
+file_size: 421534
 file_type: application/pdf
 learning_resource_types: []
 license: https://creativecommons.org/licenses/by-nc-sa/4.0/
