--- a/content/resources/mit15_082jf10_lec02-1.md
+++ b/content/resources/mit15_082jf10_lec02-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource provides information related to computational complexity
   and data structures.
 file: /courses/15-082j-network-optimization-fall-2010/0cb97d32963a86562ebc6f88ceae7319_MIT15_082JF10_lec02.ppt
+file_size: 1564160
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
