--- a/content/resources/mit15_082jf10_lec04-1.md
+++ b/content/resources/mit15_082jf10_lec04-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource provides information related to transformations and flow
   decomposition.
 file: /courses/15-082j-network-optimization-fall-2010/865cbba041c80ae94a9133a2fdaf06d4_MIT15_082JF10_lec04.ppt
+file_size: 517632
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
