--- a/content/resources/mit15_082jf10_lec09-1.md
+++ b/content/resources/mit15_082jf10_lec09-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource provides information related to basic algorithms for the
   maximum flow problem.
 file: /courses/15-082j-network-optimization-fall-2010/4a685a6bc6f742dfe614d303635fa62f_MIT15_082JF10_lec09.ppt
+file_size: 1054208
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
