--- a/content/resources/mit15_082jf10_lec11.md
+++ b/content/resources/mit15_082jf10_lec11.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information related to preflow push algorithms.
 file: /courses/15-082j-network-optimization-fall-2010/26a659cf280acd0fdd7f1e049779ddb7_MIT15_082JF10_lec11.pdf
+file_size: 506188
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
