--- a/content/resources/mit15_082jf10_lec12-1.md
+++ b/content/resources/mit15_082jf10_lec12-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource provides information related to more on preflow push algorithms.
 file: /courses/15-082j-network-optimization-fall-2010/ac8e7ad3ac3e01eddcc22dab7b0e0d5b_MIT15_082JF10_lec12.ppt
+file_size: 1180160
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
