--- a/content/resources/mit15_082jf10_lec14-1.md
+++ b/content/resources/mit15_082jf10_lec14-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information for minimum cost flow: polynomial
   time algorithms.'
 file: /courses/15-082j-network-optimization-fall-2010/35734f3a96983e590c207a6d7be54eb9_MIT15_082JF10_lec14.ppt
+file_size: 897024
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
