--- a/content/resources/mit15_082jf10_lec15-1.md
+++ b/content/resources/mit15_082jf10_lec15-1.md
@@ -3,6 +3,7 @@ content_type: resource
 description: This resource provides information related to applications of network
   flows; Linear programming review.
 file: /courses/15-082j-network-optimization-fall-2010/56433055049c206d3f80eb96aac98107_MIT15_082JF10_lec15.ppt
+file_size: 2285568
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
