--- a/content/resources/mit15_082jf10_lec16-1.md
+++ b/content/resources/mit15_082jf10_lec16-1.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information about the network simplex algorithm.
 file: /courses/15-082j-network-optimization-fall-2010/e048b527dca76980222bf258a30545f8_MIT15_082JF10_lec16.ppt
+file_size: 1159680
 file_type: application/vnd.ms-powerpoint
 learning_resource_types:
 - Lecture Notes
