--- a/content/resources/mit15_082jf10_lec20.md
+++ b/content/resources/mit15_082jf10_lec20.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information related to Lagrangian relaxation 2.
 file: /courses/15-082j-network-optimization-fall-2010/3e3ce04fd199c68fefef5fd980112774_MIT15_082JF10_lec20.pdf
+file_size: 570277
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
