--- a/content/resources/mit15_082jf10_lec22.md
+++ b/content/resources/mit15_082jf10_lec22.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information related to Multicommodity flows 2.
 file: /courses/15-082j-network-optimization-fall-2010/8dfb047185c50dce4de39d02c375e020_MIT15_082JF10_lec22.pdf
+file_size: 1231716
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
